# django-cowsay

./: README.md  db.sqlite3  pyproject.toml
cowapp/: admin.py  forms.py  models.py  mycow.py  views.py
cowapp/migrations/: 0001_initial.py
cowsay/: settings.py  urls.py
templates/: base.html  generic_form.html  history.html  index.html
